# fuego

./: APPLE_SILICON_ARM64_CHANGES.md  ARM64_OPTIMIZATIONS.md  ARM64_OPTIMIZATIONS_SUMMARY.md  BUILD_FIXES_SUMMARY.md  CMakeLists.txt  DAEMON_QUERY_IMPLEMENTATION.md  SHARED_LIBRARY_BUNDLING_FIX.md  WORKFLOW_BUNDLING_FIXES.md  arm.cmake  blocks_analyzer.cpp  build.yml  fuego_blocks_analyzer.cpp  fuego_real_analyzer.cpp  monitor_github_actions.sh  test_dynamic_mixin.cpp
.github/workflows/: appimage.yml  build.yml  check.yml  docker.yml  macOS.yml  release.yml  ubuntu22.yml  windows.yml
build-analysis/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-analysis/src/: cmake_install.cmake  fuego-wallet-cli
build-analysis/src/BurnDepositValidationService/: cmake_install.cmake
build-analysis/src/EldernodeIndexManager/: cmake_install.cmake
docker/: Dockerfile
docs/: DYNAMIC_RING_SIZE.md  FUEGOTOR_README.md
include/: INode.h
scripts/: bundle_dependencies.sh  bundle_linux.sh  bundle_macos.sh  bundle_windows.ps1  trigger-build.sh
src/: CMakeLists.txt  CryptoNoteConfig.h
src/BurnDepositValidationService/: BurnDepositValidationService.cpp
src/Common/: arm64_memory.h
src/CryptoNoteCore/: AdaptiveDifficulty.cpp  AdaptiveDifficulty.h  Blockchain.cpp  Currency.cpp  Currency.h
src/Daemon/: DaemonCommandsHandler.cpp  DaemonCommandsHandler.h
src/NodeRpcProxy/: NodeRpcProxy.cpp  NodeRpcProxy.h
src/PaymentGate/: WalletService.cpp
src/Platform/Linux/System/: Dispatcher.cpp  Dispatcher.h  TcpConnection.cpp  TcpConnection.h  TcpConnector.cpp  TcpListener.cpp  Timer.cpp
src/Platform/OSX/System/: Dispatcher.cpp  Dispatcher.h  TcpConnection.cpp  TcpConnector.cpp  TcpListener.cpp
src/Platform/Windows/System/: Dispatcher.cpp  Dispatcher.h  ErrorMessage.cpp  TcpConnection.cpp  TcpConnector.cpp  TcpListener.cpp  Timer.cpp
src/Rpc/: CoreRpcServerCommandsDefinitions.h  RpcServer.cpp  RpcServer.h
src/System/: ContextGroup.cpp
src/TUI/: CMakeLists.txt  README.md  TUIMain.cpp  TUIMain.h  TUI_SUMMARY.md  launch_tui.sh
src/TUI/Common/: TUICommon.cpp  TUICommon.h
src/TUI/Daemon/: DaemonTUI.cpp  DaemonTUI.h
src/TUI/Mining/: MiningTUI.cpp  MiningTUI.h
src/TUI/Wallet/: WalletTUI.cpp  WalletTUI.h
src/TUI/examples/: tui_example.cpp
src/TUI/test/: TUITest.cpp
src/Transfers/: BlockchainSynchronizer.cpp  BlockchainSynchronizer.h  IBlockchainSynchronizer.h  TransfersConsumer.cpp  TransfersConsumer.h  TransfersContainer.cpp
src/WalletLegacy/: WalletTransactionSender.cpp
src/crypto/: CMakeLists_arm64.txt  arm64_crypto.c  arm64_crypto.cpp  arm64_optimizations.h  crypto-ops.c  hash.c  slow-hash.c  sse2neon.h
test-bundle/: README.md  fuego-wallet-cli  fuegod  install.sh  optimizer  walletd
test-bundle/lib/: libboost_atomic.so.1.83.0  libboost_chrono.so.1.83.0  libboost_date_time.so.1.83.0  libboost_filesystem.so.1.83.0  libboost_program_options.so.1.83.0  libboost_regex.so.1.83.0  libboost_serialization.so.1.83.0  libboost_thread.so.1.83.0  libm.so.6  libresolv.so.2
